# toha

./: CMakeLists.txt  README.md
docs/: TECH_SPEC.md
scripts/: dev.ps1  install.ps1
shaders/: cube.comp  mandelbrot.comp  triangle.vert
shaders/raymarching/: bounds.glsl  dda.glsl  hierarchical.glsl
shaders/rendering/: atmosphere.glsl  lighting.glsl  materials.glsl
src/: main.cpp
src/core/: logging.cpp  logging.hpp
src/render/vulkan/: vulkan_app.cpp  vulkan_app.hpp  vulkan_debug.cpp  vulkan_debug.hpp
src/render/vulkan/app/: vulkan_app_impl.cpp  vulkan_app_impl.hpp
src/render/vulkan/camera/: camera.cpp
src/render/vulkan/compute/: compute_commands.cpp  compute_pipeline.cpp
src/render/vulkan/core/: swapchain.cpp  vk_device.cpp  vk_instance.cpp
src/render/vulkan/sync/: sync.cpp
